--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,5 @@
-
-spring.profiles.active=docker
-
 #database details
-spring.datasource.url=jdbc:mysql://localhost:3306/his
+spring.datasource.url=jdbc:mysql:3306/his
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,10 +16,3 @@ spring.mail.password= aetetcxsorsmbwqw
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-#spring.mail.host=smtp.elasticemail.com
-#spring.mail.username= yoyomaltesh4040@gmail.com
-#spring.mail.password= 305E0F55DEA4236B8B33EE3AA4EB3D1AB65F
-#spring.mail.port=2525
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
